[package]
name = "otus-tokio-devices"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
rand ={ version =  "*"}
regex = { version = "1.11.1" }
ratatui = {version = "0.29.0" }
crossterm = { version = "0.28.1", features = ["event-stream"]}
futures = "0.3.31"
color-eyre = "0.6.3"
chrono = "*"

[[bin]]
name = "server"
path = "src/main.rs"

[[example]]
name = "cli_termometer"


[[example]]
name = "cli_socket"
